--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -157,6 +157,14 @@
                 </div>
             </div>
         </header>
+        <div>
+            
+            <p>
+           total orders:  <%= orderData.length %> <br>
+            total discount: <%= overallDiscount %> <br>
+            total amount sale: <%= overallAmount %> <br>
+            </p>
+        </div>
         <div class="card-body">
             <div class="table-responsive">
                 <div class="table-responsive">
