overall sale report

--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -158,7 +158,7 @@
             </div>
         </header>
         <div>
-            
+//sdfsfdf
             <p>
            total orders:  <%= orderData.length %> <br>
             total discount: <%= overallDiscount %> <br>
