--- a/views/admin/proDetail.ejs
+++ b/views/admin/proDetail.ejs
@@ -26,42 +26,59 @@
        </div>
        <nav>
            <ul class="menu-aside">
-               <li class="menu-item ">
-                   <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
-                       <span class="text">Dashboard</span>
-                   </a>
-               </li>
-               <li class="menu-item "> 
-                   <a class="menu-link" href="/admin/ordersList"> <i class="icon material-icons md-home"></i>
-                       <span class="text">Orders</span>
-                   </a>
-               </li>
-               <li class="menu-item active">
-                   <a class="menu-link " href="/admin/products"> <i class="icon material-icons md-shopping_bag"></i>
-                       <span class="text">Products</span>
-                   </a>
-                  
-               </li>
+            <li class="menu-item active"> 
+                <a class="menu-link active" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
+                    <span class="text">Dashboard</span>
+                </a>
+            </li>
 
-               <li class="menu-item ">
-                   <a class="menu-link" href="/admin/userList"> <i class="icon material-icons md-people"></i>
-                       <span class="text">Users</span>
-                   </a>
-               </li>
-               
-              
-               <li class="menu-item ">
-                   <a class="menu-link" href="/admin/brand"> <i class="icon material-icons md-person"></i>
-                       <span class="text">Brand</span>
-                   </a>
-               </li>
-               
-               <li class="menu-item">
-                   <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
-                       <span class="text">Category</span>
-                   </a>
-               </li>
-               
+            <li class="menu-item"> 
+                <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                    <span class="text">Sales Report</span>
+                </a>
+            </li>
+            <li class="menu-item"> 
+                <a class="menu-link" href="/admin/ordersList"> <i class="icon material-icons md-list_alt"></i>
+                    <span class="text">Orders</span>
+                </a>
+            </li>
+
+            <li class="menu-item ">
+                <a class="menu-link" href="/admin/userList"> <i class="icon material-icons md-people"></i>
+                    <span class="text">Users</span>
+                </a>
+            </li>
+           
+            <li class="menu-item active">
+                <a class="menu-link active" href="/admin/products"> <i class="icon material-icons md-local_offer"></i>
+                    <span class="text">Products</span>
+                </a>
+            </li>
+
+            <li class="menu-item ">
+                <a class="menu-link" href="/admin/brand"> <i class="icon material-icons md-label"></i>
+                    <span class="text">Brand</span>
+                </a>
+            </li>
+            
+            <li class="menu-item">
+                <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
+                    <span class="text">Category</span>
+                </a>
+            </li>
+
+             <li class="menu-item "> 
+                <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-confirmation_number"></i>
+                    <span class="text">Coupon</span>
+                </a>
+            </li>
+
+            <li class="menu-item "> 
+                <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                    <span class="text">Offers</span>
+                </a>
+            </li>
+           
            <br>
            <br>
        </nav>
