--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -173,9 +173,9 @@
                                         <a href="/product-details?id=<%=proData[i]._id%>">
                                             <img class="default-img" src="/assets/adminAssets/imgUploads/<%= proData[i].productImage[0] %>" alt="Product">
                                         </a>
-                                        <div class="shop-list-quickview">
+                                        <!-- <div class="shop-list-quickview">
                                             <a data-bs-toggle="modal" data-bs-target="#exampleModal" href="/product-details?id=<%=proData[i]._id%>"><i class="fa fa-eye"></i><span>Quick Shop</span></a>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -200,13 +200,13 @@
                                     <% } %>
                                     </div>
                                     <p><%= proData[i].description %></p>
-                                    <div class="product-list-action">
+                                    <!-- <div class="product-list-action">
                                         <a title="Add to Wishlist" href="#"><i class="fa fa-heart"></i></a>
                                         <div class="pro-list-actioncart">
                                             <a title="Add to cart" href="#">Add to cart</a>
                                         </div>
                                         
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
