--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -17,7 +17,7 @@
         </div>
     </div>
 </div>
-<div class="cart-main-area pt-90 pb-100">
+<div class="cart-main-area pt-100" style="height: 700px;">
     <div class="container" style="height: 300px;">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
