--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -64,7 +64,7 @@
                                     <div class="product-details-ratting">
                                         <!-- Star ratings -->
                                     </div>
-                                    <a href="#"> (1 customer review)</a>
+                                    <!-- <a href="#"> (1 customer review)</a> -->
                                 </div>
                                 <% if (proDetails.salePrice) { %>
                                     <strike><span class="old-price">₹<%= proDetails.regularPrice %></span></strike>
@@ -96,7 +96,6 @@
                                         </div>
                                         <div class="product-details-cart">
                                             <a title="Add to cart" id="addToCartButton"  onclick="addToCart()">Add to cart</a>
-                                           
                                         </div>
                                         <!-- <div class="product-details-cart">
                                             <a style="background-color: rgb(17, 17, 17);" href="+" title="Buy now" href="/buyNow">Buy Now</a>
@@ -105,23 +104,23 @@
                                             <a title="Add to wishlist" id="addToWishlistBtn" onclick="addToWishlist()"><i class="fa fa-heart"></i></a>
                                         </div>  
                                     </div>   
-                                    <div class="product-details-info">
+                                    <!-- <div class="product-details-info">
                                         <a href="#"><i class="dlicon location_pin"></i>Store availability</a>
                                         <a href="#"><i class="dlicon envir_car"></i>Delivery and return</a>
                                         <a href="#"><i class="dlicon design_measure-17"></i>Size Guide</a>
-                                    </div>
+                                    </div> 
                                     <div class="product-details-meta">
-                                        <span>SKU: REF. LA-140</span>
-                                        <span>Categories: <a href="#">Fashions</a>, <a href="#">Main 01</a>, <a href="#">Main 02</a></span>
+                                        <span>SKU: REF. LA-140</span> 
+                                        <span>Categories: <a href="#">cat name</a>, <a href="#">Main 01</a>, <a href="#">Main 02</a></span>
                                         <span>Tags: <a href="#">Blazer</a>, <a href="#">chair</a>, <a href="#">Coat</a>, <a href="#">dress</a>, <a href="#">light</a>, <a href="#">Living</a>, <a href="#">Main 01</a></span>
                                     </div>
-                                    <div class="social-icon-style-3">
+                                <div class="social-icon-style-3">
                                         <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
                                         <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
                                         <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
                                         <a class="pinterest" href="#"><i class="fa fa-pinterest-p"></i></a>
                                         <a class="google-plus" href="#"><i class="fa fa-google-plus"></i></a>
-                                    </div>
+                                    </div> -->
                                 </div>
                             <% } %>
                         </div>
@@ -333,7 +332,7 @@
     </div>
 </div>
 
-
+<!-- 
 <div class="related-product-area section-padding-1 pb-95">
     <div class="container-fluid">
         <div class="section-title-6 mb-50">
@@ -413,7 +412,7 @@
           
         </div>
     </div>
-</div>
+</div> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
