--- a/views/admin/productBrand.ejs
+++ b/views/admin/productBrand.ejs
@@ -15,25 +15,20 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item ">
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
+                <li class="menu-item active"> 
+                    <a class="menu-link active" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
-                <li class="menu-item "> 
-                    <a class="menu-link " href="/admin/ordersList"> <i class="icon material-icons md-home"></i>
+
+                <li class="menu-item"> 
+                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                        <span class="text">Sales Report</span>
+                    </a>
+                </li>
+                <li class="menu-item"> 
+                    <a class="menu-link" href="/admin/ordersList"> <i class="icon material-icons md-list_alt"></i>
                         <span class="text">Orders</span>
-                    </a>
-                </li>
-                <li class="menu-item ">
-                    <a class="menu-link" href="/admin/products"> <i class="icon material-icons md-shopping_bag"></i>
-                        <span class="text">Products</span>
-                    </a>
-                   
-                </li>
-                <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-home"></i>
-                        <span class="text">Coupon</span>
                     </a>
                 </li>
 
@@ -42,20 +37,37 @@
                         <span class="text">Users</span>
                     </a>
                 </li>
-              
                
-                <li class="menu-item active">
-                    <a class="menu-link" href="/admin/brand"> <i class="icon material-icons md-person"></i>
-                        <span class="text">Brand</span>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/admin/products"> <i class="icon material-icons md-local_offer"></i>
+                        <span class="text">Products</span>
                     </a>
                 </li>
 
-
+                <li class="menu-item active">
+                    <a class="menu-link active" href="/admin/brand"> <i class="icon material-icons md-label"></i>
+                        <span class="text">Brand</span>
+                    </a>
+                </li>
+                
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
                     </a>
                 </li>
+
+                 <li class="menu-item "> 
+                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-confirmation_number"></i>
+                        <span class="text">Coupon</span>
+                    </a>
+                </li>
+
+                <li class="menu-item "> 
+                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                        <span class="text">Offers</span>
+                    </a>
+                </li>
+               
                 
             <br>
             <br>
@@ -108,7 +120,7 @@
     <div class="content-header">
         <div>
             <h2 class="content-title card-title">Brands </h2>
-            <p>Add, edit or delete a Brand</p>
+            <p>Add and block Brand</p>
         </div>
         <div>
             <input type="text"  placeholder="Search Categories" class="form-control bg-white">
@@ -145,7 +157,7 @@
                                 <tr>   
                                     <th>Brand</th>
                                     <th>Action</th>
-                                    <th>Delete</th>
+                                    <!-- <th>Delete</th> -->
                                 </tr>
                             </thead>
                             <tbody>
@@ -163,9 +175,9 @@
                                             </a>
                                         <% } %>
                                      </td>     
-                                     <td>
+                                     <!-- <td>
                                         <button class="toggleBtn btn btn-sm font-sm btn-brand rounded" onclick="confirmDelete('<%= bra.brandName %>')">Delete</button>
-                                    </td>
+                                    </td> -->
                                 </tr>
                                 <% }) %>
                             </tbody>
