--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -136,10 +136,10 @@
                             <div class="same-style cart-wrap">
                                 <a href="/" class="cart-active">
                                     <i class="dlicon shopping_bag-20"></i>
-                                    <!-- <span class="count-style">02</span> -->
+                                    <span class="count-style">02</span>
                                 </a>
                             </div>
-                            <!-- <div class="same-style header-search">
+                            <div class="same-style header-search">
                                 <a class="search-active" href="#">
                                     <i class="dlicon ui-1_zoom"></i>
                                 </a>
@@ -149,7 +149,7 @@
                                     <li><a href="login">Login</a></li>
                                     <li><a href="signup">SignUp</a></li>
                                 </ul>
-                            </div> -->
+                            </div>
                             <div class="dropdown same-style">
                                 <a href="#"><i class="fa fa-user"></i></a>
                                 <div class="dropdown-content account-dropdown-active">
