--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -5,9 +5,10 @@
 
       <div class="product-slider-area bg-gray-2 " >
             <div class="product-slider-active-5" >
+                <% for(let i=0; i < Math.min(4, proData.length); i++){ %> 
                 <div class="single-product-slider text-center">
                     <a href="product-details"><img src="assets/userAssets/images/product/pro-slider-4.png" alt="product"></a>
-                    <h3>Lace-up suede sneake</h3>
+                    <h3>proData</h3>
                     <span>₹ 4900</span>
                 </div>
                 <div class="single-product-slider text-center">
@@ -20,6 +21,7 @@
                     <h3>Lace-up suede sneake</h3>
                     <span>₹ 4900</span>
                 </div>
+                <% } %>
             </div>
         </div>
 
@@ -31,9 +33,9 @@
                     <h2>New Arrival</h2>
                 </div>
                 <div class="product-tab-list-5 nav mt-20 mb-45">
-                    <a class="active" href="#product-6" data-bs-toggle="tab">
+                    <!-- <a class="active" href="#product-6" data-bs-toggle="tab">
                         Products
-                    </a>
+                    </a> -->
                       
                     <!-- <a href="#product-8" data-bs-toggle="tab">
                         HandBag
@@ -148,7 +150,7 @@
             }
         </script>
 
-
+<!-- 
         <div class="subscribe-area pt-100 pb-100">
             <div class="container">
                 <div class="row">
@@ -173,7 +175,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
